<resources>
    <string name="app_name">Purrytify</string>
    <string name="title_home">Home</string>
    <string name="title_library">Library</string>
    <string name="title_profile">Profile</string>
    <string name="new_songs">New songs</string>
    <string name="recently_played">Recently played</string>
    <string name="artist">Artist</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="title">Title</string>
    <string name="upload_song">Upload Song</string>
    <string name="play_song">Play song</string>
    <string name="like_song">Like song</string>
    <string name="mini_album_cover">Mini Album Cover</string>
    <string name="mini_player_artist_name">Artist</string>
    <string name="mini_player_song_title">Song Title</string>
    <string name="item_new_song_title">Song Title</string>
    <string name="item_new_song_artist_name">Artist Name</string>
    <string name="item_new_song_album_cover">Album Cover</string>
    <string name="cover_art">Cover art</string>
    <string name="library_all_songs">All</string>
    <string name="library_liked_songs">Liked</string>
    <string name="library_header">Your Library</string>
    <string name="library_add_song">Add Song</string>
    <string name="collapse_player" />
    <string name="album_cover_player" />
    <string name="play_pause_song" />
    <string name="next_song" />
    <string name="previous_song" />
    <string name="edit_song">Edit Song</string>
    <string name="delete_song" />
    <string name="song_title">Song Title</string>
    <string name="artist_name">Artist Name</string>
    <string name="edit_song_drawer">Edit Song</string>
    <string name="artist_name_edit">Artist Name</string>
    <string name="song_title_edit">Song Title</string>
    <string name="empty_library">Your library is empty. Add some songs to get started!</string>
    <string name="no_search_results">No songs match your search</string>
    <string name="no_liked_songs">You haven\'t liked any songs yet</string>
    <string name="current_time">1:44</string>
    <string name="duration">3:50</string>
    <string name="_player">Song Title</string>
    <string name="song_title_player" />
    <string name="artist_title_player">The Weeknd, Daft Punk</string>
    <string name="shuffle">Shuffle</string>
    <string name="repeat">Repeat</string>
    <string name="save_update">Update</string>
    <string name="title_add_edit_song">Title</string>
    <string name="song_title_add_edit_song">Song Title</string>
    <string name="artist_add_edit_song">Artist</string>
    <string name="artist_name_add_edit_song">Artist Name</string>
    <string name="file_upload">file upload</string>
    <string name="photo_upload">photo upload</string>
    <string name="background_image">background image</string>
    <string name="login_logo">login logo</string>
    <string name="search_songs_or_artists">Search songs or artists</string>
    <string name="image_search">image search</string>
    <string name="close_search">close search</string>
    <string name="library_icon">library icon</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="circle_background">circle background</string>
    <string name="circle_edit_button">circle edit button</string>
    <string name="song_title_recent_song">Song Title</string>
    <string name="default_album_picture">default album picture</string>
    <string name="millions_of_songs">Millions of Songs.</string>
    <string name="only_on_purrytify">Only on Purrytify.</string>
    <string name="email">Email</string>
    <string name="email_edit">Email</string>
    <string name="password">Password</string>
    <string name="password_edit">Password</string>
    <string name="log_in">Log In</string>
    <string name="check_your_internet">Please check your internet connection and try again.</string>
    <string name="profile">Profile</string>
    <string name="username">13522xxx</string>
    <string name="location">None</string>
    <string name="logout">Logout</string>
    <string name="_135">135</string>
    <string name="songs">SONGS</string>
    <string name="_32">32</string>
    <string name="liked">LIKED</string>
    <string name="_50">50</string>
    <string name="listened">LISTENED</string>
    <string name="artist_recent_song">Artist</string>
    <string name="edit_recent_song">Edit</string>
    <string name="delete_song_icon">Delete</string>
    <string name="artist_song_card">Artist</string>
    <string name="song_title_card">Song Title</string>
    <string name="pilih_output_audio">Pilih Output Audio</string>
    <string name="audio_output_internal_speaker">Internal Speaker</string>
    <string name="audio_output_headphones">Headphones</string>
    <string name="audio_output_bluetooth">Bluetooth Device</string>
    <string name="playing_on">Playing on: %s</string>
    <string name="audio_output_disconnected_message">Bluetooth device disconnected. Audio output switched to %s.</string>
    <string name="action_select_audio_output">Select Audio Output</string>
    <string name="content_desc_back_button">Back</string>
    <string name="content_desc_options_button">More options</string>
    <string name="content_desc_album_art">Album art</string>
    <string name="content_desc_toggle_favorite">Toggle favorite</string>
    <string name="content_desc_play_pause_button">Play or pause current song</string>
    <string name="content_desc_previous_button">Play previous song</string>
    <string name="content_desc_next_button">Play next song</string>
    <string name="content_desc_shuffle_button">Toggle shuffle mode</string>
    <string name="content_desc_repeat_button">Toggle repeat mode</string>
    <string name="content_desc_audio_output_icon">Current audio output device</string>
    <string name="bluetooth_icon_desc">Bluetooth audio output</string>
    <string name="speaker_icon_desc">Speaker audio output</string>
    <string name="headset_icon_desc">Wired headset audio output</string>
    <string name="current_audio_output_device_icon">Current audio output device icon</string>
</resources>