<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="120dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginEnd="12dp"
    android:background="?attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true">

    <ImageView
        android:id="@+id/imgCover"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:background="@drawable/rounded_corner_background"
        android:contentDescription="@string/cover_art"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/song_title_card"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="14sp"
        android:maxLines="1"
        android:ellipsize="end" />

    <TextView
        android:id="@+id/tvArtist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/artist_song_card"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp"
        android:maxLines="2"
        android:ellipsize="end" />
</LinearLayout>
