<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <action
        android:id="@+id/action_global_nowPlayingFragment"
        app:destination="@id/nowPlayingFragment"
        app:launchSingleTop="true" />

    <fragment
        android:id="@+id/nowPlayingFragment"
        android:name="com.tubes.purry.ui.player.MiniPlayerFragment"
        android:label="Now Playing"
        tools:layout="@layout/fragment_mini_player" />

    <fragment
        android:id="@+id/addSongFragment"
        android:name="com.tubes.purry.ui.library.AddSongFragment"
        android:label="Add Song"
        tools:layout="@layout/fragment_add_song" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.tubes.purry.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/editSongFragment"
        android:name="com.tubes.purry.ui.library.EditSongFragment"
        android:label="Edit Song"
        tools:layout="@layout/fragment_edit_song">

        <argument
            android:name="song"
            app:argType="com.tubes.purry.data.model.Song" />
    </fragment>

    <fragment
        android:id="@+id/navigation_library"
        android:name="com.tubes.purry.ui.library.LibraryFragment"
        android:label="@string/title_library"
        tools:layout="@layout/fragment_library">
        <action
            android:id="@+id/action_libraryFragment_to_addSongFragment"
            app:destination="@id/addSongFragment" />
        <action
            android:id="@+id/action_libraryFragment_to_editSongFragment"
            app:destination="@id/editSongFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.tubes.purry.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>